--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(0px);
 }
 
 .first_page h1 {
@@ -59,7 +59,7 @@
   height: 100vh;
   align-items: center;
   justify-content: center;
-  backdrop-filter: blur(7px);
+  backdrop-filter: blur(0);
   gap: 100px;
   background-color: rgba(51, 61, 80, 0.7);
 }
